--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux-logger": "^3.0.6",
+    "sass": "^1.52.3",
+    "scss": "^0.2.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
